[package]
name = "async-cron"
description = "Asynchronous Cron Scheduler"
version = "0.1.0"
authors = ["B4TT3RY <gb4tt3ry@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/B4TT3RY/async-cron"
keywords = ["async", "cron", "scheduler"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
