[package]
name = "async-cron"
description = "Asynchronous Cron Scheduler"
version = "0.1.0"
authors = ["B4TT3RY <gb4tt3ry@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/B4TT3RY/async-cron"
documentation = "https://docs.rs/async-cron"
keywords = ["async", "cron", "scheduler"]

features = ["tokio", "async-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9", optional = true }
tokio = { version = "1.5", optional = true }
uuid = { version = "0.8.2", features = ["v4"] }
cron = "0.9.0"

[dev-dependencies]
tokio = { version = "1.5", features = ["full"] }
async-std = { version = "1.9", features = ["attributes"] }